manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dso-sample
  name: dso-sample
spec:
  selector:
    matchLabels:
      app: dso-sample
  template:
    metadata:
      labels:
        app: dso-sample
    spec:
      containers:
      - image: dso-quay-registry-quay-quay-enterprise.apps.ocp2.azure.dso.digital.mod.uk/dso-project/dso-sample:latest
        imagePullPolicy: Always
        name: dso-sample
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
